...
          Farmer-to-Buyer Digital Marketplace
        </Text>
      </View>

      <View className="w-full pb-16 gap-4">
        <Button
          title="Get Started"
          size="lg"
          onPress={handleGetStarted}
          className="rounded-full py-4 bg-primary"
          textClassName="text-lg font-bold text-white"
        />
        <TouchableOpacity
...
